fix: invert colors for 'loader' gif for dark mode

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -59,6 +59,10 @@ body {
   display: none;
 }
 
+.dark .loader {
+  filter: invert(1);
+}
+
 h1,
 h2,
 h3 {
